Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20751

Lock cycle (deadlock) during bucket delete and DCP client disconnect

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 4.5.1, 4.6.0
    • 4.5.1, 5.0.0
    • couchbase-bucket
    • None
    • Untriaged
    • Yes

    Description

      ./testrunner -i INI_FILE.ini get-cbcollect-info=True,get-logs=False,stop-on-failure=False,get-coredumps=True,fail_on_errors=1,GROUP=ALL -t xdcr.rebalanceXDCR.Rebalance.async_rebalance_in,items=100000,rdirection=unidirection,ctopology=chain,update=C1,delete=C1,rebalance=C2,num_rebalance=2,GROUP=P0;xmem

      testcase failed in cleanup with bucket deletion issue - seen in 2i and ns_server as well - attaching logs

      Attachments

        1. 172.23.106.115-diag.txt.gz
          1.86 MB
        2. 172.23.107.161-diag.txt.gz
          1.62 MB
        3. 172.23.108.170-diag.txt.gz
          1.63 MB
        4. 172.23.121.161-diag.txt.gz
          223 kB
        5. 172.23.121.162-diag.txt.gz
          224 kB
        6. 172.23.121.163-diag.txt.gz
          224 kB
        7. 172.23.121.164-diag.txt.gz
          1.69 MB
        8. consoleFull.rtf
          123 kB
        9. logs.tar
          87.01 MB
        10. mcsoda.log
          126 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              arunkumar Arunkumar Senthilnathan (Inactive)
              arunkumar Arunkumar Senthilnathan (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty